# sdcv

./: .gitignore  README  configure.ac  init.sh
src/: Makefile.am  libwrapper.cpp  libwrapper.hpp  readline.cpp  readline.hpp  sdcv.cpp  utils.cpp
tests/: t_datadir  t_list  t_utf8input
